Melhorando modelagem de domino e criação de teste

--- a/src/Identiy/Identity.Domain.Test/Identity.Test.csproj
+++ b/src/Identiy/Identity.Domain.Test/Identity.Test.csproj
@@ -22,4 +22,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Identiy.Domain\Identiy.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UseCases\User\" />
+  </ItemGroup>
+
 </Project>
