--- a/src/User.API/Properties/launchSettings.json
+++ b/src/User.API/Properties/launchSettings.json
@@ -6,7 +6,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "connectionString": "Host=localhost;Port=5432;Username=USER;Password=USER123;Database=SIC;"
+        "connectionString": "Host=localhost;Port=5432;Username=USER;Password=USER123;Database=SIC"
+
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5188"
