--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,3 +10,54 @@ services:
       POSTGRES_DB: "SIC"          
     ports:
       - "5432:5432"
+
+  mongodb:
+    image: mongo:6-jammy
+    ports:
+      - '27017:27017'
+    volumes:
+      - dbdata6:/data/db
+          
+  storage:
+    image: ghcr.io/openzipkin/zipkin-mysql:latest
+    container_name: mysql    
+    ports:
+    - 3306:3306
+
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin    
+    environment:
+      - STORAGE_TYPE=mysql      
+      - MYSQL_HOST=mysql
+      - MYSQL_USER=zipkin
+      - MYSQL_PASS=zipkin
+    ports:      
+      - 9411:9411      
+    depends_on:
+      - storage
+  
+  dependencies:
+    image: openzipkin/zipkin-dependencies
+    container_name: dependencies
+    entrypoint: crond -f
+    environment:
+      - STORAGE_TYPE=mysql
+      - MYSQL_HOST=mysql      
+      - MYSQL_USER=zipkin
+      - MYSQL_PASS=zipkin
+    depends_on:
+      - storage
+
+  seq:
+    image: datalust/seq:latest
+    ports:
+      - "5341:80"
+    environment:
+       ACCEPT_EULA: "Y"
+    volumes:
+      - ./seq-data:/data
+        
+
+volumes:
+  dbdata6:
