--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -18,36 +18,14 @@ services:
     volumes:
       - dbdata6:/data/db
           
-  storage:
-    image: ghcr.io/openzipkin/zipkin-mysql:latest
-    container_name: mysql    
+  jaeger:
+    image: jaegertracing/all-in-one:latest
     ports:
-    - 3306:3306
-
-  zipkin:
-    image: openzipkin/zipkin
-    container_name: zipkin    
+      - "16686:16686"
+      - "14268:14268"
     environment:
-      - STORAGE_TYPE=mysql      
-      - MYSQL_HOST=mysql
-      - MYSQL_USER=zipkin
-      - MYSQL_PASS=zipkin
-    ports:      
-      - 9411:9411      
-    depends_on:
-      - storage
-  
-  dependencies:
-    image: openzipkin/zipkin-dependencies
-    container_name: dependencies
-    entrypoint: crond -f
-    environment:
-      - STORAGE_TYPE=mysql
-      - MYSQL_HOST=mysql      
-      - MYSQL_USER=zipkin
-      - MYSQL_PASS=zipkin
-    depends_on:
-      - storage
+      - COLLECTOR_OTLP_ENABLED=true
+      - LOG_LEVEL=debug
 
   seq:
     image: datalust/seq:latest
